fixed the overflow x issue

--- a/style.css
+++ b/style.css
@@ -69,10 +69,6 @@ h4 {
     margin-bottom: 25px;
 }
 
-.section-column-main{
-    padding: 10px;
-}
-
 /*--------------------------------------------Heading*/
 header {
     margin: 0;
